<resources>
    <string name="app_name">LIPSCollage</string>
    <string name="something_went_wrong">something_went_wrong</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_data">no data</string>
    <string name="subject_name">Subject Name</string>
    <string name="course_name">Course Name</string>
    <string name="subject">Subject</string>
    <string name="feculty_name">Feculty Name</string>
    <string name="semester">Semester</string>
    <string name="total_lecture">Total Lecture</string>
    <string name="view"><u>View</u>
    </string>
</resources>