<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:elevation="5dp"
    app:cardCornerRadius="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/coursenameTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/course_name"
                android:textColor="@color/main2"
                android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:background="@color/c4" />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp"
            android:weightSum="2">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_light"
                android:text="@string/subject"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:layout_weight="1"
                />
            <TextView
                android:id="@+id/subjectTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_light"
                android:text="@string/subject"
                android:textColor="@color/black"
                android:textSize="14sp"
               android:gravity="end"
                android:layout_weight="1"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp"
            android:weightSum="2">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_light"
                android:text="@string/feculty_name"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/feculty_nameTextView"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="end"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_light"
                android:text="name"
                android:textColor="@color/black"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp"
            android:weightSum="2">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_light"
                android:text="@string/semester"
                android:textColor="@color/black"
                android:textSize="14sp" />


            <TextView
                android:id="@+id/semesterTextView"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="end"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_light"
                android:text="0"
                android:textColor="@color/black"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:weightSum="2">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_light"
                android:text="@string/total_lecture"
                android:textColor="@color/stausbar"
                android:textSize="14sp" />



            <TextView
                android:id="@+id/total_lectureTextView"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="end"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_light"
                android:text="0"
                android:textColor="@color/stausbar"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>


</androidx.cardview.widget.CardView>