<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:padding="10dp"
    tools:context=".Activities.LecturePerfomaDetailActivity">
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Course Name"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:fontFamily="@font/roboto_medium"/>
        <TextView
            android:id="@+id/courselpDetailTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="course name"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:fontFamily="@font/roboto_light"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:weightSum="2">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Semester"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:fontFamily="@font/roboto_medium"/>
        <TextView
            android:id="@+id/semlpDetailTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="sem"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:fontFamily="@font/roboto_light"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:weightSum="2">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/subject"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:fontFamily="@font/roboto_medium"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/subjectlpDetailTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="sub"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:fontFamily="@font/roboto_light"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:weightSum="2">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/feculty_name"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:fontFamily="@font/roboto_medium"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/fecutylpDetailTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="fec Name"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:fontFamily="@font/roboto_light"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:weightSum="2">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/total_lecture"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:fontFamily="@font/roboto_medium"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/total_lecturelpDetailTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="0"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:fontFamily="@font/roboto_light"
            android:layout_weight="1"/>
    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/lpDetailRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"/>
    </LinearLayout>
    <include
        android:visibility="gone"
        layout="@layout/no_data_layout"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="128dp" />

</RelativeLayout>